project(CompNetLab2)

include_directories(inc)

file(GLOB SOURCE "src/*.c")

#add_executable(checkCP1CP2 ${SOURCE} "check/checkCP1CP2.c")
#target_link_libraries(checkCP1CP2 pcap)
#target_link_libraries(checkCP1CP2 pthread)

#add_compile_options(-Wl,--wrap=socket)
#add_compile_options(-Wl,--wrap=socket)
#add_compile_options(-Wl,--wrap=socket)
#add_compile_options(-Wl,--wrap=socket)

add_executable(main ${SOURCE} "check/main.c")
target_link_libraries(main pcap)
target_link_libraries(main pthread)

#add_executable(clientCP8 ${SOURCE} "check/clientCP8.c")
#target_link_libraries(clientCP8 pcap)
#target_link_libraries(clientCP8 pthread)

#add_executable(serverCP8 ${SOURCE} "check/serverCP8.c")
#target_link_libraries(serverCP8 pcap)
#target_link_libraries(serverCP8 pthread)

add_executable(client ${SOURCE} "check/client.c")
target_link_libraries(client pcap)
target_link_libraries(client pthread)
target_link_options(client PRIVATE "-Wl,--wrap=socket")
target_link_options(client PRIVATE "-Wl,--wrap=bind")
target_link_options(client PRIVATE "-Wl,--wrap=listen")
target_link_options(client PRIVATE "-Wl,--wrap=connect")
target_link_options(client PRIVATE "-Wl,--wrap=accept")
target_link_options(client PRIVATE "-Wl,--wrap=read")
target_link_options(client PRIVATE "-Wl,--wrap=write")
target_link_options(client PRIVATE "-Wl,--wrap=close")

add_executable(server ${SOURCE} "check/server.c")
target_link_libraries(server pcap)
target_link_libraries(server pthread)
target_link_options(server PRIVATE "-Wl,--wrap=socket")
target_link_options(server PRIVATE "-Wl,--wrap=bind")
target_link_options(server PRIVATE "-Wl,--wrap=listen")
target_link_options(server PRIVATE "-Wl,--wrap=connect")
target_link_options(server PRIVATE "-Wl,--wrap=accept")
target_link_options(server PRIVATE "-Wl,--wrap=read")
target_link_options(server PRIVATE "-Wl,--wrap=write")
target_link_options(server PRIVATE "-Wl,--wrap=close")

add_executable(routing ${SOURCE} "check/routing.c")
target_link_libraries(routing pcap)
target_link_libraries(routing pthread)

add_executable(echo_client ${SOURCE} "checkpoints/echo_client.c")
target_link_libraries(echo_client pcap)
target_link_libraries(echo_client pthread)
target_link_options(echo_client PRIVATE "-Wl,--wrap=socket")
target_link_options(echo_client PRIVATE "-Wl,--wrap=bind")
target_link_options(echo_client PRIVATE "-Wl,--wrap=listen")
target_link_options(echo_client PRIVATE "-Wl,--wrap=connect")
target_link_options(echo_client PRIVATE "-Wl,--wrap=accept")
target_link_options(echo_client PRIVATE "-Wl,--wrap=read")
target_link_options(echo_client PRIVATE "-Wl,--wrap=write")
target_link_options(echo_client PRIVATE "-Wl,--wrap=close")

add_executable(echo_server ${SOURCE} "checkpoints/echo_server.c")
target_link_libraries(echo_server pcap)
target_link_libraries(echo_server pthread)
target_link_options(echo_server PRIVATE "-Wl,--wrap=socket")
target_link_options(echo_server PRIVATE "-Wl,--wrap=bind")
target_link_options(echo_server PRIVATE "-Wl,--wrap=listen")
target_link_options(echo_server PRIVATE "-Wl,--wrap=connect")
target_link_options(echo_server PRIVATE "-Wl,--wrap=accept")
target_link_options(echo_server PRIVATE "-Wl,--wrap=read")
target_link_options(echo_server PRIVATE "-Wl,--wrap=write")
target_link_options(echo_server PRIVATE "-Wl,--wrap=close")

add_executable(perf_client ${SOURCE} "checkpoints/perf_client.c")
target_link_libraries(perf_client pcap)
target_link_libraries(perf_client pthread)
target_link_options(perf_client PRIVATE "-Wl,--wrap=socket")
target_link_options(perf_client PRIVATE "-Wl,--wrap=bind")
target_link_options(perf_client PRIVATE "-Wl,--wrap=listen")
target_link_options(perf_client PRIVATE "-Wl,--wrap=connect")
target_link_options(perf_client PRIVATE "-Wl,--wrap=accept")
target_link_options(perf_client PRIVATE "-Wl,--wrap=read")
target_link_options(perf_client PRIVATE "-Wl,--wrap=write")
target_link_options(perf_client PRIVATE "-Wl,--wrap=close")

add_executable(perf_server ${SOURCE} "checkpoints/perf_server.c")
target_link_libraries(perf_server pcap)
target_link_libraries(perf_server pthread)
target_link_options(perf_server PRIVATE "-Wl,--wrap=socket")
target_link_options(perf_server PRIVATE "-Wl,--wrap=bind")
target_link_options(perf_server PRIVATE "-Wl,--wrap=listen")
target_link_options(perf_server PRIVATE "-Wl,--wrap=connect")
target_link_options(perf_server PRIVATE "-Wl,--wrap=accept")
target_link_options(perf_server PRIVATE "-Wl,--wrap=read")
target_link_options(perf_server PRIVATE "-Wl,--wrap=write")
target_link_options(perf_server PRIVATE "-Wl,--wrap=close")